@@ -1,3 +1,8 @@
+
+	-Changed settings-stuff
+	-BeDC now uses the correct charset
+	-BeDC has moved to sourceforge
+
 *0.1-alpha3:
 	-Added menubar
 	-Added saving of settings
